--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <div class="max-w-sm mx-auto py-6">
   <h2 class="text-center text-2xl font-bold mb-6">Login</h2>
-  <form method="post" action="{% url 'accounts:login' %}">
+  <form method="post" action="{% url 'accounts:login' %}" class="text-center">
     {% csrf_token %} {{ form.as_p }}
     <button
       type="submit"
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+      class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8 mt-4"
     >
       Login
     </button>
@@ -14,7 +14,7 @@
     Don't have an account?
     <a
       href="{% url 'accounts:register' %}"
-      class="text-blue-500 hover:text-blue-800"
+      class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8"
       >Sign up</a
     >
   </p>
