--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %} {% block content %}
-<h2>Register</h2>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Register</button>
+<h2 class="text-2xl font-bold mb-4">Register</h2>
+
+<form
+  method="post"
+  class="border-2 border-slate-800 p-8 flex flex-col justify-center items-center"
+>
+  {% csrf_token %}
+  <div class="mb-4">{{ form.username.label }}: {{ form.username }}</div>
+  <div class="mb-4">{{ form.first_name.label }}: {{ form.first_name }}</div>
+  <div class="mb-4">{{ form.last_name.label }}: {{ form.last_name }}</div>
+  <div class="mb-4">{{ form.email.label }}: {{ form.email }}</div>
+  <div class="mb-4">{{ form.password1.label }}: {{ form.password1 }}</div>
+  <div class="mb-4">{{ form.password2.label }}: {{ form.password2 }}</div>
+  <button type="submit" class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8">Register</button>
 </form>
+
 {% if form.errors %}
 <p>Please correct the errors below.</p>
 {% endif %} {% endblock %}
