--- a/events/templates/create_event.html
+++ b/events/templates/create_event.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Event</h1>
-<form method="post">
+<h1 class="text-2xl font-bold mb-4">Create New Event</h1>
+<form method="post" class="border-2 border-slate-800 p-8 flex flex-col justify-center items-center">
   {% csrf_token %} {{ form.as_p }} {% if form.errors %}
   <p>Your form has errors, please check them before submitting:</p>
   {% endif %}
-  <button type="submit">Save Event</button>
+  <button type="submit" class="btn btn-danger hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded">Save Event</button>
 </form>
 {% endblock %}
