--- a/events/templates/events.html
+++ b/events/templates/events.html
@@ -1,45 +1,44 @@
-{% extends 'base.html' %}
-{% load event_tags %}
-
-{% block content %}
-<div class="m-20 bg-slate-400 text-gray-900 p-6 rounded-lg shadow-md flex flex-col justify-center items-center">
-    <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
-    
-    {% if user.is_authenticated %}
+<!-- This Page Shows all upcoming events  -->
+{% extends 'base.html' %} {% load event_tags %} {% block content %}
+<div class="flex flex-col justify-center items-center">
+  <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
+  {% if user.is_authenticated %} {% if user|has_group:"Administrator" %}
+  <a
+    href="{% url 'events:event_create' %}"
+    class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8"
+    >Create a new event!</a
+  >
+  {% endif %} {% for event in events %}
+  <div class="mb-4">
+    <div class="mb-4 p-10 bg-slate-300 rounded">
+      <div>
+        <strong>Event Name:</strong> {{ event.name }} <br /><strong
+          >Organizer:</strong
+        >
+        {{ event.organizer }} <br /><strong>Location:</strong> 
+        {{ event.location }} <br /><strong>Date:</strong> {{ event.date }}
+      </div>
+      <div class="flex flex-row justify-center items-center">
+        <a
+          href="{% url 'events:event_register' event.pk %}"
+          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
+          >Register</a
+        >
         {% if user|has_group:"Administrator" %}
-            <a href="{% url 'events:event_create' %}" class="hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8">Create a new event!</a>
-        {% endif %}
-
-        <ul>
-            {% for event in events %}
-            <div class="mb-4 bg-slate-300 p-10 rounded">
-                <div class="mb-4">
-                <li >
-                    Event Name: {{ event.name }}
-                    <br>Organizer: {{ event.organizer }}
-                    <br>Location: {{ event.location }}
-                    <br>Date: {{ event.date }}
-                </div>
-                <div>
-                    <form action="{% url 'events:event_register' event.pk %}" method="post" style="display: inline">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded" onclick="return confirm('Are you sure you want to register for this event?');">
-                            Register
-                        </button>
-                    </form>
-
-                    {% if user|has_group:"Administrator" %}
-                        <form action="{% url 'events:event_delete' event.pk %}" method="post" style="display: inline">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-danger hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded" onclick="return confirm('Are you sure you want to delete this event?');">
-                                Delete Event
-                            </button>
-                        </form>
-                        <a href="{% url 'events:event_update' event.pk %}" class="hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded">Edit Event</a></div>
-                    {% endif %}
-                </li></div>
-            {% endfor %}
-        </ul>
-    {% endif %}
+        <a
+          href="{% url 'events:event_delete' event.pk %}"
+          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
+          >Delete Event</a
+        >
+        <a
+          href="{% url 'events:event_update' event.pk %}"
+          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
+          >Edit Event</a
+        >
+      </div>
+    </div>
+  </div>
+  {% endif %}
 </div>
-{% endblock %}
+
+{% endfor %} {% endif %} {% endblock %}
