--- a/events/templates/registered_events.html
+++ b/events/templates/registered_events.html
@@ -1,8 +1,10 @@
+<!-- This page shows the events that the current user is signed up for -->
+
 {% extends 'base.html' %} {% block content %}
 <div
-  class="container m-20 bg-slate-400 text-gray-900 p-6 rounded-lg shadow-md flex flex-col justify-center items-center"
+  class=""
 >
-  <h1 class="font-bold text-xl underline mb-4">
+  <h1 class="text-2xl font-bold mb-4">
     You're Registered for these events:
   </h1>
   {% if events %}
