--- a/accounts/templates/admin_events_list.html
+++ b/accounts/templates/admin_events_list.html
@@ -1,3 +1,4 @@
+<!-- This page will display all events including past events -->
 {% extends 'base.html'%} {% load event_tags %} {% block content %}
 <div class="">
   <h1 class="text-2xl font-bold mb-4 text-center">Events and Registrants</h1>
