--- a/events/templates/events.html
+++ b/events/templates/events.html
@@ -2,43 +2,78 @@
 {% extends 'base.html' %} {% load event_tags %} {% block content %}
 <div class="flex flex-col justify-center items-center">
   <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
+
   {% if user.is_authenticated %} {% if user|has_group:"Administrator" %}
   <a
     href="{% url 'events:event_create' %}"
     class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded mb-8"
     >Create a new event!</a
   >
-  {% endif %} {% for event in events %}
-  <div class="mb-4">
-    <div class="mb-4 p-10 bg-slate-300 rounded">
-      <div>
-        <strong>Event Name:</strong> {{ event.name }} <br /><strong
-          >Organizer:</strong
-        >
-        {{ event.organizer }} <br /><strong>Location:</strong> 
-        {{ event.location }} <br /><strong>Date:</strong> {{ event.date }}
-      </div>
-      <div class="flex flex-row justify-center items-center">
-        <a
-          href="{% url 'events:event_register' event.pk %}"
-          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
-          >Register</a
-        >
-        {% if user|has_group:"Administrator" %}
-        <a
-          href="{% url 'events:event_delete' event.pk %}"
-          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
-          >Delete Event</a
-        >
-        <a
-          href="{% url 'events:event_update' event.pk %}"
-          class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 m-2 rounded"
-          >Edit Event</a
-        >
+  {% endif %}
+
+  <ul>
+    {% for event in events %}
+    <div class="mb-4">
+      <div class="mb-4 p-10 bg-slate-300 rounded">
+        <div>
+          <strong>Event Name:</strong> {{ event.name }} <br /><strong
+            >Organizer:</strong
+          >
+          {{ event.organizer }} <br /><strong>Location:</strong> 
+          {{ event.location }} <br /><strong>Date:</strong> {{ event.date }}
+        </div>
+        <div>
+          <div class="flex flex-row justify-center items-center">
+            <div>
+              <form
+                action="{% url 'events:event_register' event.pk %}"
+                method="post"
+                style="display: inline"
+              >
+                {% csrf_token %}
+                <div class="flex justify-center">
+                  <button
+                    type="submit"
+                    class="btn btn-danger hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded"
+                    onclick="return confirm('Are you sure you want to register for this event?');"
+                  >
+                    Register
+                  </button>
+                </div>
+              </form>
+            </div>
+
+            {% if user|has_group:"Administrator" %}
+            <div class="m-4">
+              <form
+                action="{% url 'events:event_delete' event.pk %}"
+                method="post"
+                style="display: inline"
+              >
+                {% csrf_token %}
+                <button
+                  type="submit"
+                  class="btn btn-danger hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded"
+                  onclick="return confirm('Are you sure you want to delete this event?');"
+                >
+                  Delete Event
+                </button>
+              </form>
+            </div>
+            <div>
+              <a
+                href="{% url 'events:event_update' event.pk %}"
+                class="hover:underline hover:bg-slate-800 bg-blue-700 text-gray-200 p-2 rounded"
+                >Edit Event</a
+              >
+            </div>
+          </div>
+        </div>
+        {% endif %}
       </div>
     </div>
-  </div>
+    {% endfor %}
+  </ul>
   {% endif %}
 </div>
-
-{% endfor %} {% endif %} {% endblock %}
+{% endblock %}
